2003-07-31  Brian Warner  <warner@lothar.com>

	* twisted/python/filepath.py (FilePath.__getstate__): allow
	FilePath objects to survive unpersisting.

2003-07-30  Brian Warner  <warner@lothar.com>

	* doc/howto/faq.html: mention spawnProcess vs. os.environ

	* doc/howto/test-standard.html: document usage of .todo and .skip

2003-07-28  Brian Warner  <warner@lothar.com>

	* twisted/python/_c_dir.c: hush compiler warning

	* setup.py: add twisted.xish

2003-07-28  Itamar Shtull-Trauring  <itamar@itamarst.org>

	* twisted/spread/pb.py (PBClientFactory): a new, superior API for
	starting PB connections. Create a factory, do a
	reactor.connectTCP/SSL() etc., then factory.getPerspective().

2003-07-27  Dave Peticolas  <dave@krondo.com>

	* twisted/test/test_enterprise.py: enable tests that depend on
	cp_min and cp_max

	* twisted/enterprise/adbapi.py: use threadpool to handle cp_min and
	cp_max arguments

	* twisted/test/test_threadpool.py: test existing work

	* twisted/python/threadpool.py: check for existing work in start()

2003-07-25  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/protocols/imap4.py: The fetch method of the IMailbox
	interface has been changed to accept only a MessageSet and a uid
	argument and to return an IMessage implementor.

2003-07-24  Brian Warner  <warner@lothar.com>

	* twisted/internet/cReactor/cDelayedCall.c: implement .active and
	.getTime methods

	* twisted/test/test_internet.py (InterfaceTestCase.wake): remove
	reactor.initThreads() call. This is a private method which is
	triggered internally by the current reactor when threadable.init
	is called. It does not need to be called independently, and not
	all reactors implement this particular method.

	* twisted/test/test_threads.py: shuffle test cases, add timeouts
	to avoid hanging tests. Added (disabled) test to trigger cReactor
	hang (but unfortunately it fails under the default reactor)

2003-07-23  Dave Peticolas  <dave@krondo.com>
