@@ -1,3 +1,8 @@
+2003-08-04  Dave Peticolas  <dave@krondo.com>
+
+	* twisted/python/usage.py: use parameter docs if handler
+	method has none. fixes bug displaying trial help.
+
 2003-07-31  Brian Warner  <warner@lothar.com>
 
 	* twisted/python/filepath.py (FilePath.__getstate__): allow
